scrollbar bug fixed

--- a/css/Notifications.css
+++ b/css/Notifications.css
@@ -34,7 +34,7 @@
 .notifications::-webkit-scrollbar-thumb {
     background: #1A5E63; 
     border-radius: 10px;
-    margin-top: 5px;
+    margin-top: 2px;
     margin-bottom: 5px;
 }
 
